# moneyTransferService-backend/src/main/java/ru/netology/moneytransferservice/rest/TransferController.java
@@ -3,6 +3,7 @@ package ru.netology.moneytransferservice.rest;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.TransferApi;
 import org.openapitools.model.OperationDto;
+import org.openapitools.model.SuccessOperationDto;
 import org.openapitools.model.TransferReqDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -14,7 +15,8 @@ public class TransferController implements TransferApi {
   private final TransferService transferService;
 
   @Override
-  public ResponseEntity<OperationDto> transferPost(TransferReqDto transferReqDto) {
-    return TransferApi.super.transferPost(transferReqDto);
+  public ResponseEntity<SuccessOperationDto> transferPost(TransferReqDto transferReqDto) {
+    SuccessOperationDto output = transferService.transferPost(transferReqDto);
+    return ResponseEntity.ok(output);
   }
 }
